--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <%= link_to "All invoices", invoices_path %>
+    <%= link_to "New invoice", new_invoice_path %>
+    <hr>
     <%= yield %>
   </body>
 </html>
